testdata/baselines/reference/compiler/strictArrayVariance(strictarrayvariance=true).errors.txt
strictArrayVariance.ts(7,7): error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
  Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
    Types of property 'concat' are incompatible.
      Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
        Types of parameters 'items' and 'items' are incompatible.
          Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
            The types returned by 'slice(...)' are incompatible between these types.
              Type '(string | number)[]' is not assignable to type 'string[]'.
                Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
                  The types returned by 'pop()' are incompatible between these types.
                    Type 'string | number | undefined' is not assignable to type 'string | undefined'.
                      Type 'number' is not assignable to type 'string'.
strictArrayVariance.ts(23,9): error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
  Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
    Types of property 'concat' are incompatible.
      Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
        Types of parameters 'items' and 'items' are incompatible.
          Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
            The types returned by 'slice(...)' are incompatible between these types.
              Type '(string | number)[]' is not assignable to type 'string[]'.
                Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
                  The types returned by 'pop()' are incompatible between these types.
                    Type 'string | number | undefined' is not assignable to type 'string | undefined'.
                      Type 'number' is not assignable to type 'string'.
strictArrayVariance.ts(32,9): error TS2345: Argument of type 'ArrayAlias<string>' is not assignable to parameter of type 'ArrayAlias<string | number>'.
  Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
    Types of property 'concat' are incompatible.
      Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
        Types of parameters 'items' and 'items' are incompatible.
          Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
            The types returned by 'slice(...)' are incompatible between these types.
              Type '(string | number)[]' is not assignable to type 'string[]'.
                Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
                  The types returned by 'pop()' are incompatible between these types.
                    Type 'string | number | undefined' is not assignable to type 'string | undefined'.
                      Type 'number' is not assignable to type 'string'.
strictArrayVariance.ts(40,12): error TS2345: Argument of type '[string, string]' is not assignable to parameter of type '[string | number, string]'.
  Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
    Type at position 0 in source is not compatible with type at position 0 in target.
strictArrayVariance.ts(49,6): error TS2345: Argument of type 'string[][]' is not assignable to parameter of type '(string | number)[][]'.
  Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
    The types returned by 'pop()' are incompatible between these types.
      Type 'string[] | undefined' is not assignable to type '(string | number)[] | undefined'.
        Type 'string[]' is not assignable to type '(string | number)[]'.
          Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
            Types of property 'concat' are incompatible.
              Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
                Types of parameters 'items' and 'items' are incompatible.
                  Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
                    The types returned by 'slice(...)' are incompatible between these types.
                      Type '(string | number)[]' is not assignable to type 'string[]'.
                        Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
                          The types returned by 'pop()' are incompatible between these types.
                            Type 'string | number | undefined' is not assignable to type 'string | undefined'.
                              Type 'number' is not assignable to type 'string'.
strictArrayVariance.ts(69,12): error TS2345: Argument of type '{ xs: string[]; }' is not assignable to parameter of type 'Hold'.
  Types of property 'xs' are incompatible.
    Type 'string[]' is not assignable to type '(string | number)[]'.
      Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
        Types of property 'concat' are incompatible.
          Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
            Types of parameters 'items' and 'items' are incompatible.
              Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
                The types returned by 'slice(...)' are incompatible between these types.
                  Type '(string | number)[]' is not assignable to type 'string[]'.
                    Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
                      The types returned by 'pop()' are incompatible between these types.
                        Type 'string | number | undefined' is not assignable to type 'string | undefined'.
                          Type 'number' is not assignable to type 'string'.
strictArrayVariance.ts(91,11): error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
  Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
    Types of property 'concat' are incompatible.
      Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
        Types of parameters 'items' and 'items' are incompatible.
          Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
            The types returned by 'slice(...)' are incompatible between these types.
              Type '(string | number)[]' is not assignable to type 'string[]'.
                Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
                  The types returned by 'pop()' are incompatible between these types.
                    Type 'string | number | undefined' is not assignable to type 'string | undefined'.
                      Type 'number' is not assignable to type 'string'.
strictArrayVariance.ts(95,7): error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
  Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
    Types of property 'concat' are incompatible.
      Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
        Types of parameters 'items' and 'items' are incompatible.
          Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
            The types returned by 'slice(...)' are incompatible between these types.
              Type '(string | number)[]' is not assignable to type 'string[]'.
                Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
                  The types returned by 'pop()' are incompatible between these types.
                    Type 'string | number | undefined' is not assignable to type 'string | undefined'.
                      Type 'number' is not assignable to type 'string'.


==== strictArrayVariance.ts (8 errors) ====
    // Mutable Array: covariant element typing is unsound when the callee mutates.
    function widen(xs: (string | number)[]) {
        xs.push(3);
    }
    
    const ys: string[] = ["a"];
    widen(ys);
          ~~
!!! error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
!!! error TS2345:   Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:     Types of property 'concat' are incompatible.
!!! error TS2345:       Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
!!! error TS2345:         Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:           Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
!!! error TS2345:             The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:               Type '(string | number)[]' is not assignable to type 'string[]'.
!!! error TS2345:                 Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:                   The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:                     Type 'string | number | undefined' is not assignable to type 'string | undefined'.
!!! error TS2345:                       Type 'number' is not assignable to type 'string'.
    
    // ReadonlyArray stays covariant in T; passing readonly string[] should remain ok.
    function read(xs: ReadonlyArray<string | number>) {
        return xs[0];
    }
    
    const rs: readonly string[] = ["b"];
    read(rs);
    
    // `Array<T>` syntax uses the same `globalArrayType` variance as `(T)[]`.
    function idArray(xs: Array<string | number>) {
        xs.push(3);
    }
    
    const zs: Array<string> = ["c"];
    idArray(zs);
            ~~
!!! error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
!!! error TS2345:   Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:     Types of property 'concat' are incompatible.
!!! error TS2345:       Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
!!! error TS2345:         Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:           Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
!!! error TS2345:             The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:               Type '(string | number)[]' is not assignable to type 'string[]'.
!!! error TS2345:                 Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:                   The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:                     Type 'string | number | undefined' is not assignable to type 'string | undefined'.
!!! error TS2345:                       Type 'number' is not assignable to type 'string'.
    
    // Type alias to `Array<T>` should use the same variance as `Array<T>` / `(T)[]`.
    type ArrayAlias<T> = Array<T>;
    function idAlias(xs: ArrayAlias<string | number>) {
        xs.push(3);
    }
    
    const ws: ArrayAlias<string> = ["d"];
    idAlias(ws);
            ~~
!!! error TS2345: Argument of type 'ArrayAlias<string>' is not assignable to parameter of type 'ArrayAlias<string | number>'.
!!! error TS2345:   Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:     Types of property 'concat' are incompatible.
!!! error TS2345:       Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
!!! error TS2345:         Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:           Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
!!! error TS2345:             The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:               Type '(string | number)[]' is not assignable to type 'string[]'.
!!! error TS2345:                 Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:                   The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:                     Type 'string | number | undefined' is not assignable to type 'string | undefined'.
!!! error TS2345:                       Type 'number' is not assignable to type 'string'.
    
    // Mutable tuples: element positions are invariant under strictArrayVariance.
    function widenTuple(xs: [string | number, string]) {
        xs[0] = 1;
    }
    
    const tup: [string, string] = ["x", "y"];
    widenTuple(tup);
               ~~~
!!! error TS2345: Argument of type '[string, string]' is not assignable to parameter of type '[string | number, string]'.
!!! error TS2345:   Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:     Type at position 0 in source is not compatible with type at position 0 in target.
    
    // Nested `Array<Array<U>>`: element type `U[]` is still `globalArrayType`.
    function nest(xs: (string | number)[][]) {
        xs[0].push(3);
    }
    
    const row: string[] = ["p"];
    const grid: string[][] = [row];
    nest(grid);
         ~~~~
!!! error TS2345: Argument of type 'string[][]' is not assignable to parameter of type '(string | number)[][]'.
!!! error TS2345:   Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:     The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:       Type 'string[] | undefined' is not assignable to type '(string | number)[] | undefined'.
!!! error TS2345:         Type 'string[]' is not assignable to type '(string | number)[]'.
!!! error TS2345:           Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:             Types of property 'concat' are incompatible.
!!! error TS2345:               Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
!!! error TS2345:                 Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:                   Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
!!! error TS2345:                     The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:                       Type '(string | number)[]' is not assignable to type 'string[]'.
!!! error TS2345:                         Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:                           The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:                             Type 'string | number | undefined' is not assignable to type 'string | undefined'.
!!! error TS2345:                               Type 'number' is not assignable to type 'string'.
    
    // Readonly tuples use tuple variance (covariant), like ReadonlyArray.
    function rtup(xs: readonly [string | number, string]) {
        return xs[0];
    }
    
    const rt: readonly [string, string] = ["u", "v"] as const;
    rtup(rt);
    
    // Structural assignability: object with `string[]` field to type expecting `(string | number)[]`.
    interface Hold {
        xs: (string | number)[];
    }
    
    function mutateCell(h: Hold) {
        h.xs.push(1);
    }
    
    const cell: { xs: string[] } = { xs: ["q"] };
    mutateCell(cell);
               ~~~~
!!! error TS2345: Argument of type '{ xs: string[]; }' is not assignable to parameter of type 'Hold'.
!!! error TS2345:   Types of property 'xs' are incompatible.
!!! error TS2345:     Type 'string[]' is not assignable to type '(string | number)[]'.
!!! error TS2345:       Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:         Types of property 'concat' are incompatible.
!!! error TS2345:           Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
!!! error TS2345:             Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:               Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
!!! error TS2345:                 The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:                   Type '(string | number)[]' is not assignable to type 'string[]'.
!!! error TS2345:                     Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:                       The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:                         Type 'string | number | undefined' is not assignable to type 'string | undefined'.
!!! error TS2345:                           Type 'number' is not assignable to type 'string'.
    
    // Inference: generic element extraction via `infer U` still works; the instance of
    // Array<string> has its type argument inferred as `string` regardless of the flag.
    type ElemOf<T> = T extends Array<infer U> ? U : never;
    type E1 = ElemOf<string[]>; // string
    const e1: E1 = "ok";
    
    // Inference: a generic identity function should infer T from the argument type.
    // Under strictArrayVariance this still works because T is inferred, not constrained
    // by a widening target.
    function idGeneric<T>(xs: T[]): T[] {
        return xs;
    }
    
    const inferred = idGeneric(ys); // inferred: string[]
    const checkInferred: string[] = inferred;
    
    // Inference: when the target is wider than the source and both are mutable Array,
    // the strict flag rejects the call (same as the widen cases above) rather than
    // silently widening the inferred type argument.
    function takeWider(xs: Array<string | number>) {}
    takeWider(ys);
              ~~
!!! error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
!!! error TS2345:   Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:     Types of property 'concat' are incompatible.
!!! error TS2345:       Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
!!! error TS2345:         Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:           Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
!!! error TS2345:             The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:               Type '(string | number)[]' is not assignable to type 'string[]'.
!!! error TS2345:                 Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:                   The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:                     Type 'string | number | undefined' is not assignable to type 'string | undefined'.
!!! error TS2345:                       Type 'number' is not assignable to type 'string'.
    
    // Spread alone does NOT widen under this flag: `[...ys]` has type `string[]`,
    // so this still errors. The diagnostic message must not suggest otherwise.
    widen([...ys]);
          ~~~~~~~
!!! error TS2345: Argument of type 'string[]' is not assignable to parameter of type '(string | number)[]'.
!!! error TS2345:   Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:     Types of property 'concat' are incompatible.
!!! error TS2345:       Type '{ (...items: ConcatArray<string>[]): string[]; (...items: (string | ConcatArray<string>)[]): string[]; }' is not assignable to type '{ (...items: ConcatArray<string | number>[]): (string | number)[]; (...items: (string | number | ConcatArray<string | number>)[]): (string | number)[]; }'.
!!! error TS2345:         Types of parameters 'items' and 'items' are incompatible.
!!! error TS2345:           Type 'ConcatArray<string | number>' is not assignable to type 'ConcatArray<string>'.
!!! error TS2345:             The types returned by 'slice(...)' are incompatible between these types.
!!! error TS2345:               Type '(string | number)[]' is not assignable to type 'string[]'.
!!! error TS2345:                 Under '--strictArrayVariance', the element type of mutable 'Array' and mutable tuples is invariant. Use 'ReadonlyArray' at the parameter type if reads suffice, or declare the source as the wider element type.
!!! error TS2345:                   The types returned by 'pop()' are incompatible between these types.
!!! error TS2345:                     Type 'string | number | undefined' is not assignable to type 'string | undefined'.
!!! error TS2345:                       Type 'number' is not assignable to type 'string'.
    
    // The primary migration target: `readonly` at the parameter boundary stays
    // covariant under the flag, so passing `string[]` to a consumer typed for
    // `readonly (string | number)[]` is still accepted.
    function readWider(xs: readonly (string | number)[]) {
        return xs.length;
    }
    readWider(ys);
    
    // Callback contravariance is orthogonal to array variance and must keep
    // working: a callback accepting the wider element type is assignable to a
    // parameter typed for the narrower one.
    function forEachString(xs: readonly string[], cb: (x: string) => void) {
        for (const x of xs) cb(x);
    }
    const wideCb: (x: string | number) => void = () => {};
    forEachString(ys, wideCb);
    